--- a/index.css
+++ b/index.css
@@ -25,7 +25,7 @@
 .search {
     position: relative;
     width: 100%;
-    max-width: 300px; /* Maximum width */
+    max-width: 200px; /* Maximum width */
     margin: 0 auto;
 }
 
@@ -2301,7 +2301,7 @@ nav .fa-solid.fa-xmark {
 .nav-item .dropdown-menu {
   display: none; /* Initially hidden */
   position: absolute;
-  background-color: #2d629f;
+  background-color: #304e82f7;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-top: 0.5rem;
   z-index: 1050;
